# pdtd

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  FEATURES.md  README.md  _ul  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
.claude/: settings.local.json
.claude/commands/: create-plan.md  implement-plan.md  review-session.md
apps/api/: .env.example  Cargo.toml  Dockerfile
apps/api/migrations/: 001_initial.sql
apps/api/src/: main.rs
apps/api/src/auth/: mod.rs
apps/api/src/db/: mod.rs
apps/api/src/handlers/: mod.rs
apps/api/src/models/: mod.rs
apps/api/src/routes/: auth.rs  mod.rs  notes.rs  sync.rs  user.rs
apps/api/src/sync/: mod.rs
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  logging.rs  main.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src-tauri/src/storage/: mod.rs
apps/desktop/src/components/: AboutOverlay.css  AboutOverlay.tsx  DropdownMenu.css  DropdownMenu.tsx  Editor.css  Editor.tsx  NoteItem.css  NoteItem.tsx  SearchInput.css  SearchInput.tsx  ShortcutsOverlay.css  ShortcutsOverlay.tsx  Sidebar.css  Sidebar.tsx  TitleBar.css  TitleBar.tsx
apps/desktop/src/hooks/: useKeyboardShortcuts.ts
apps/desktop/src/pages/: LogsPage.css  LogsPage.tsx
apps/desktop/src/stores/: focusStore.ts  notesStore.ts  settingsStore.ts
apps/desktop/src/styles/: global.css
apps/web/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.tsx
apps/web/src/lib/: api.ts
apps/web/src/pages/: Login.tsx  Notes.tsx  Settings.tsx
apps/web/src/stores/: auth.ts  notes.ts
apps/web/src/styles/: global.css
apps/website/: CNAME  index.html  styles.css
docker/: docker-compose.yml
